--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "nodemon": "^3.1.0",
     "razorpay": "^2.9.4",
     "sequelize": "^6.37.3",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "uuid": "^9.0.1"
   }
 }
