--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "aws-sdk": "^2.1625.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.0",
